# tinygraph

./: .gitignore  AGENTS.md  README.md  SYSTEM_DESIGN.md  pyproject.toml
docs/: BACKENDS.md  OPS.md  QUANTIZATION.md
docs/reports/: attention_backend_quant.html  gelu_mlp_quant.html  mlp_quant.html
examples/: attention_block.json  gelu_mlp.json  layernorm.json  linear.json  mlp.json
tests/: test_backends.py  test_cli.py  test_core.py  test_ops_v3.py  test_quantization.py
tinygraph/: __init__.py  benchmark.py  cli.py  compiler.py  ir.py  memory.py  ops.py  passes.py  quantization.py  report.py  runtime.py  serialization.py  shape.py  validation.py
tinygraph/backends/: __init__.py  numpy_backend.py  torch_backend.py
