[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tinygraph-compiler"
version = "0.1.0"
description = "A tiny neural network graph compiler lab built with Python and NumPy."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "torch>=2.11",
]

[project.scripts]
tinygraph = "tinygraph.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tinygraph*"]
